--- a/InteractiveGraphicalApp/InteractiveGraphicalApp/InteractiveGraphicalApp.csproj
+++ b/InteractiveGraphicalApp/InteractiveGraphicalApp/InteractiveGraphicalApp.csproj
@@ -90,6 +90,12 @@
     <Compile Include="Infraestructure\Config.cs" />
     <Compile Include="Infraestructure\Constants.cs" />
     <Compile Include="Infraestructure\Graphics\IImageExporter.cs" />
+    <Compile Include="Presentation\Forms\Curves\FrmBSpline.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentation\Forms\Curves\FrmBSpline.Designer.cs">
+      <DependentUpon>FrmBSpline.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentation\Forms\Curves\FrmBezier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,12 +107,6 @@
     </Compile>
     <Compile Include="Presentation\Forms\Rasterize\FrmBresenham.Designer.cs">
       <DependentUpon>FrmBresenham.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Presentation\Forms\Curves\FrmBSplines.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Presentation\Forms\Curves\FrmBSplines.Designer.cs">
-      <DependentUpon>FrmBSplines.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentation\Forms\Clipping\FrmCohenShutherland.cs">
       <SubType>Form</SubType>
@@ -187,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentation\Forms\Clipping\FrmShutherlandHodgeman.resx">
       <DependentUpon>FrmShutherlandHodgeman.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentation\Forms\Curves\FrmBSpline.resx">
+      <DependentUpon>FrmBSpline.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentation\Forms\Curves\FrmBezier.resx">
       <DependentUpon>FrmBezier.cs</DependentUpon>
